[gd_scene load_steps=7 format=3 uid="uid://bgxeontawmtjh"]

[ext_resource type="Texture2D" uid="uid://n58rjonnlh8j" path="res://assets/ice-cream/FLAVOR_vanilla_SCOOP.svg" id="1_5ld2s"]
[ext_resource type="Script" path="res://scenes/Scoop.gd" id="2_cgx0d"]
[ext_resource type="Texture2D" uid="uid://cpwrm34rixr4i" path="res://assets/ice-cream/FLAVOR_pistachio_SCOOP.svg" id="3_lknxs"]
[ext_resource type="Texture2D" uid="uid://d0faopg31i0ii" path="res://assets/ice-cream/FLAVOR_strawberry_SCOOP.svg" id="4_7md70"]
[ext_resource type="Texture2D" uid="uid://b26kes60qm3xu" path="res://assets/ice-cream/FLAVOR_chocolate_SCOOP.svg" id="5_0vt6m"]
[ext_resource type="Texture2D" uid="uid://dcxxyi3nocmvp" path="res://assets/ice-cream/FLAVOR_blueberry_SCOOP.svg" id="6_klpby"]

[node name="Scoop" type="Sprite2D"]
position = Vector2(-83.948, -133.554)
scale = Vector2(0.318654, 0.318655)
texture = ExtResource("1_5ld2s")
script = ExtResource("2_cgx0d")
flavor = "vanilla"

[node name="VanillaScoop" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_5ld2s")

[node name="PictachioScoop" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_lknxs")

[node name="StawberryScoop" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_7md70")

[node name="ChocolateScoop" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_0vt6m")

[node name="BlueberryScoop" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6_klpby")
